@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <module type="PYTHON_MODULE" version="4">
   <component name="NewModuleRootManager">
-    <content url="file://D:/VDR-XBMC/xbmcstubs-master">
-      <excludeFolder url="file://D:/VDR-XBMC/xbmcstubs-master" />
+    <content url="file://D:/yaXBMC/xbmcstubs-master">
+      <excludeFolder url="file://D:/yaXBMC/xbmcstubs-master" />
     </content>
     <content url="file://$MODULE_DIR$" />
-    <orderEntry type="inheritedJdk" />
+    <orderEntry type="jdk" jdkName="Python 2.7.9 (C:\Python27\python.exe)" jdkType="Python SDK" />
     <orderEntry type="sourceFolder" forTests="false" />
   </component>
 </module>
