@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.lgtv.remote"
-       name="LG Smart TV 3D Switch"
-       version="0.1.7"
-       provider-name="Birger Jesch">
-  <extension point="xbmc.service"
-        library="default.py" start="login" />
+<addon id="service.lgtv.remote" name="LG Smart TV 3D Switch" version="0.1.8" provider-name="Birger Jesch">
+  <extension point="xbmc.service" library="default.py" start="login" />
+  <extension point="xbmc.python.script" library="scan.py" />
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <summary lang="en">LG Smart TV 3D Switch - for both 2011 and 2012 series</summary>
@@ -17,6 +14,6 @@
     <forum></forum>
     <website>http://vdr4bj1.no-ip.org</website>
     <email>birger.jesch@gmail.com</email>
-    <source></source>
+    <source>https://github.com/b-jesch/service.lgtv.remote</source>
   </extension>
 </addon>
