@@ -33,4 +33,5 @@
     <string id="30052">Protocol types 'ROAP' and 'HDCP' are not accepted by your device. Can't pair.</string>
     <string id="30053">No connection to IP address %s. Turn on your LG Smart TV or check your settings.</string>
     <string id="30054">No connection to LG smart TV</string>
+    <string id="30055">This Addon is a part of LG Remote 3D Switch Service and cannot use as a standalone application.</string>
 </strings>
