@@ -33,4 +33,5 @@
     <string id="30052">Die Protokolle 'ROAP' und 'HDCP' werden nicht von Deinem Gerät unterstützt. Ein Pairing ist nicht möglich.</string>
     <string id="30053">Keine Verbindung zur IP-Adresse %s. Schalte Dein LG Smart TV ein und/oder überprüfe Deine Einstellungen.</string>
     <string id="30054">Keine Verbindung zum LG smart TV</string>
+    <string id="30055">Dieses Addon ist Bestandteil des LG Remote 3D Switch Services und kann nicht als eigenständiges Programm aufgerufen werden.</string>
 </strings>
